@@ -1,4 +1,4 @@
-# $NetBSD: md.sparc64,v 1.136 2011/10/08 13:14:03 mbalmer Exp $
+# $NetBSD: md.sparc64,v 1.137 2011/10/13 22:08:17 joerg Exp $
 ./libexec/ld.elf_so-sparc			base-sysutil-bin	compat,pic
 ./sbin/edlabel					base-sysutil-root	obsolete
 ./usr/bin/fdformat				base-util-bin
@@ -238,6 +238,8 @@
 ./usr/lib/sparc/libskey.so.2.0			base-compat-shlib	compat,pic,skey
 ./usr/lib/sparc/libsl.so.5			base-compat-shlib	compat,pic,kerberos
 ./usr/lib/sparc/libsl.so.5.0			base-compat-shlib	compat,pic,kerberos
+./usr/lib/sparc/libsqlite3.so.1			base-compat-shlib	compat,pic
+./usr/lib/sparc/libsqlite3.so.1.0		base-compat-shlib	compat,pic
 ./usr/lib/sparc/libss.so.6			base-compat-shlib	obsolete
 ./usr/lib/sparc/libss.so.6.0			base-compat-shlib	obsolete
 ./usr/lib/sparc/libssh.so.18			base-compat-shlib	compat,pic,crypto
